TAP5-2700: trying to fix XMLTokenStreamTests.testStreamEncoding()